# moonray_dcc_plugins

./: CMakeLists.txt  README.md
houdini/: CMakeLists.txt  moonray_nodes.json
houdini/otls/: Vop::DW_MOONRAY::AttributeMap::1.hda  Vop::DW_MOONRAY::AxisAngleMap::1.hda  Vop::DW_MOONRAY::BaseMaterial::1.hda  Vop::DW_MOONRAY::BaseVolume::1.hda  Vop::DW_MOONRAY::BlendDisplayFilter::1.hda  Vop::DW_MOONRAY::BlendMap::1.hda  Vop::DW_MOONRAY::CheckerboardMap::1.hda  Vop::DW_MOONRAY::ClampDisplayFilter::1.hda  Vop::DW_MOONRAY::ClampMap::1.hda  Vop::DW_MOONRAY::ColorCorrectContrastMap::1.hda  Vop::DW_MOONRAY::ColorCorrectDisplayFilter::1.hda  Vop::DW_MOONRAY::ColorCorrectGainOffsetMap::1.hda  Vop::DW_MOONRAY::ColorCorrectGammaMap::1.hda  Vop::DW_MOONRAY::ColorCorrectHsvMap::1.hda  Vop::DW_MOONRAY::ColorCorrectHueShiftMap::1.hda  Vop::DW_MOONRAY::ColorCorrectLegacyMap::1.hda  Vop::DW_MOONRAY::ColorCorrectMap::1.hda  Vop::DW_MOONRAY::ColorCorrectNukeMap::1.hda  Vop::DW_MOONRAY::ColorCorrectSaturationMap::1.hda  Vop::DW_MOONRAY::ColorCorrectTMIMap::1.hda  Vop::DW_MOONRAY::CombineDisplacement::1.hda  Vop::DW_MOONRAY::CombineNormalMap::1.hda  Vop::DW_MOONRAY::ConstantColorMap::1.hda  Vop::DW_MOONRAY::ConstantDisplayFilter::1.hda  Vop::DW_MOONRAY::ConstantScalarMap::1.hda  Vop::DW_MOONRAY::ConvolutionDisplayFilter::1.hda  Vop::DW_MOONRAY::CurvatureMap::1.hda  Vop::DW_MOONRAY::CutoutVolume::1.hda  Vop::DW_MOONRAY::DebugMap::1.hda  Vop::DW_MOONRAY::DeformationMap::1.hda  Vop::DW_MOONRAY::DirectionalMap::1.hda  Vop::DW_MOONRAY::DiscretizeDisplayFilter::1.hda  (+93 more)
(+165 files in other folders)
